tests/ui/implicit-method-bind.rs
fn main() {
    let _f = 10i32.abs; //~ ERROR attempted to take value of method
}
